feat(backend): add route to get list off all downloads for session
